Further development of documentation

--- a/doc/db/bibliography.bib
+++ b/doc/db/bibliography.bib
@@ -2,3 +2,30 @@
 % BibTex Database
 % ===========================================================================
 
+@misc{hudritsch:script:cp,
+    author          = "Marcus Hudritsch",
+    title           = "Grundlagen der {C}omputer {V}ision",
+    howpublished    = "",
+    year            = "2013",
+    month           = "October",
+    note            = "",
+}
+
+@misc{fuhrer:script:splines,
+    author          = "Claude Fuhrer",
+    title           = "Introduction to {S}plines",
+    howpublished    = "",
+    year            = "2013",
+    month           = "April",
+    note            = "",
+}
+
+@article{kass88snakes:active,
+    author = {Michael Kass and Andrew Witkin and Demetri Terzopoulos},
+    title = {Snakes: Active contour models},
+    journal = {INTERNATIONAL JOURNAL OF COMPUTER VISION},
+    year = {1988},
+    volume = {1},
+    number = {4},
+    pages = {321--331}
+}
