--- a/doc/db/glossary.tex
+++ b/doc/db/glossary.tex
@@ -1,5 +1,11 @@
+\newglossaryentry{aktiver Konturen}
+{
+    name=Aktive Konturen,
+    description={Foos the bar}
+}
 
-\newglossaryentry{URI}{name={URI},description={Unified Resource Identifier; Einheitlicher Bezeichner für Ressourcen}}
-\newglossaryentry{StwVrz}{name={Stichwortverzeichnis},description={Verzeichnis mit Stichworten aus dem Text}}
-
-
+\newglossaryentry{Segmentationsmethoden}
+{
+    name=Segmentation,
+    description={``Segmentieren beduetet, jedes Pixel einer bestimmten Region zuzuweisen.''~\cite[S. 133]{hudritsch:script:cp}}
+}
