--- a/doc/lead/title.tex
+++ b/doc/lead/title.tex
@@ -1,1 +1,1 @@
-\providecommand{\title}{Erkennung von aktiven Konturen mittels Matlab}
+\providecommand{\doctitle}{Erkennung von aktiven Konturen mittels Matlab}
