--- a/doc/lead/versions.tex
+++ b/doc/lead/versions.tex
@@ -11,8 +11,10 @@ Versionen
 \fontsize{10pt}{18pt}\selectfont
 \begin{tabbing}
 xxxxxxxxxxx\=xxxxxxxxxxxxxxx\=xxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
-\textit{Version}	\> \textit{Datum}	\> \textit{Status}		\> \textit{Bemerkungen}\\
-0.1	\> 30.11.2014	\> Entwurf		\> Initiale Erstellung des Dokuments\\
+\textit{Version}	\> \textit{Kalenderwoche}	\> \textit{Status}		\> \textit{Bemerkungen}\\
+0.1	\> 9	\> Entwurf		\> Initiale Erstellung des Dokuments\\
+0.2	\> 10	\> Entwurf		\> Erstellung Konzept\\
+0.3	\> 11	\> Entwurf		\> Verfassen der Einleitung und Grundlagen\\
 \end{tabbing}
 
 \end{textblock}
