Title image, grammatical corrections
* Added title image
* Changed dissertation to project work

--- a/doc/lead/title_image.tex
+++ b/doc/lead/title_image.tex
@@ -11,10 +11,11 @@
     \end{picture}
 \end{textblock}
 
-% \begin{textblock}{154}[0,-0.2](28,42)
-%     \centering
-%     \includegraphics[scale=0.7]{bilder/owl.png}   % Titelbild definieren
-% \end{textblock}
+\begin{textblock}{154}[0,0](26.7,50.5)
+    \centering
+    \includegraphics[scale=0.264]{images/title.jpg}\protect\footnotemark{}
+\end{textblock}
+\footnotetext{Quelle: \url{http://www.freeimages.com/photo/1358335}}
 
 \begin{textblock}{154} (28,135)
     \begin{picture}(150,2)
@@ -28,13 +29,15 @@
 \vspace*{120mm}
 
 \fontsize{26pt}{28pt}\selectfont
-\title{}
+Erkennung von aktiven Konturen mittels Matlab
 \vspace{3mm}
 
-
+\fontsize{20pt}{22pt}\selectfont
+Projektarbeit
+\vspace{3mm}
 
 \fontsize{10pt}{12pt}\selectfont
-\textbf{Erkennung von aktiven Konturen mittels Matlab} \\
+\textbf{BZG1301: Programmierung mit Matlab/Octave} \\
 \vspace{3mm}
 
 \begin{textblock}{150} (28,215)
