Corrections, further development, finishing

--- a/doc/db/bibliography.bib
+++ b/doc/db/bibliography.bib
@@ -29,3 +29,81 @@
     number = {4},
     pages = {321--331}
 }
+
+@article{williams92faa,
+    author = {Williams, Donna J. and Shah, Mubarak},
+    title = {A Fast Algorithm for Active Contours and Curvature Estimation},
+    journal = {CVGIP: Image Underst.},
+    issue_date = {Jan. 1992},
+    volume = {55},
+    number = {1},
+    month = jan,
+    year = {1992},
+    issn = {1049-9660},
+    pages = {14--26},
+    numpages = {13},
+    url = {http://dx.doi.org/10.1016/1049-9660(92)90003-L},
+    doi = {10.1016/1049-9660(92)90003-L},
+    acmid = {134401},
+    publisher = {Academic Press, Inc.},
+    address = {Orlando, FL, USA},
+}
+
+@article{Chan:2001:ACW:2318993.2320071,
+    author = {Chan, T. F. and Vese, L. A.},
+    title = {Active Contours Without Edges},
+    journal = {Trans. Img. Proc.},
+    issue_date = {February 2001},
+    volume = {10},
+    number = {2},
+    month = feb,
+    year = {2001},
+    issn = {1057-7149},
+    pages = {266--277},
+    numpages = {12},
+    url = {http://dx.doi.org/10.1109/83.902291},
+    doi = {10.1109/83.902291},
+    acmid = {2320071},
+    publisher = {IEEE Press},
+    address = {Piscataway, NJ, USA},
+}
+
+@misc{ wiki:snakes,
+    author = "Wikipedia",
+    title = "Aktive Kontur --- {W}ikipedia",
+    year = "2014",
+    url = "http://de.wikipedia.org/wiki/Aktive_Kontur",
+    note = "[Online; accessed 27-December-2014]"
+}
+
+@misc{ wiki:matlab,
+    author = "Wikipedia",
+    title = "Matlab --- {W}ikipedia",
+    year = "2014",
+    url = "http://de.wikipedia.org/wiki/Matlab",
+    note = "[Online; accessed 27-December-2014]"
+}
+
+@misc{ wiki:parameter,
+    author = "Wikipedia",
+    title = "Parameterdarstellung --- {W}ikipedia",
+    year = "2014",
+    url = "http://de.wikipedia.org/wiki/Parameterdarstellung",
+    note = "[Online; accessed 27-December-2014]"
+}
+
+@misc{ wiki:bspline,
+    author = "Wikipedia",
+    title = "Spline --- {W}ikipedia",
+    year = "2014",
+    url = "http://de.wikipedia.org/wiki/Spline#B-Splines",
+    note = "[Online; accessed 27-December-2014]"
+}
+
+@misc{ wiki:kontinuitaet,
+    author = "Wikipedia",
+    title = "Stetigkeit --- {W}ikipedia",
+    year = "2014",
+    url = "http://de.wikipedia.org/wiki/Stetigkeit",
+    note = "[Online; accessed 27-December-2014]"
+}
