--- a/doc/db/glossary.tex
+++ b/doc/db/glossary.tex
@@ -1,11 +1,35 @@
 \newglossaryentry{aktiver Konturen}
 {
     name=Aktive Konturen,
-    description={Foos the bar}
+    description={``Snakes, auch aktive Konturen genannt, sind ein Konzept, das in der digitalen Bildverarbeitung zur Bestimmung einer Objektkontur angewandt wird.''~\cite{wiki:snakes}}
 }
 
 \newglossaryentry{Segmentationsmethoden}
 {
     name=Segmentation,
     description={``Segmentieren beduetet, jedes Pixel einer bestimmten Region zuzuweisen.''~\cite[S. 133]{hudritsch:script:cp}}
+}
+
+\newglossaryentry{MATLAB}
+{
+    name=MATLAB,
+    description={``Matlab (Eigenschreibweise: MATLAB) ist eine kommerzielle Software des Unternehmens The MathWorks, Inc.\ zur Lösung mathematischer Probleme und zur grafischen Darstellung der Ergebnisse. Matlab ist primär für numerische Berechnungen mithilfe von Matrizen ausgelegt, woher sich auch der Name ableitet: MATrix LABoratory.''~\cite{wiki:matlab}}
+}
+
+\newglossaryentry{parametrisierten}
+{
+    name=Parameterdarstellung,
+    description={``Unter einer Parameterdarstellung (auch Parametrisierung oder Parametrierung) versteht man in der Mathematik eine Darstellung, bei der die Punkte einer Kurve oder Fläche als Funktion einer oder mehrerer Variablen, der Parameter, durchlaufen werden.''~\cite{wiki:parameter}}
+}
+
+\newglossaryentry{B-Spline-Kurve}
+{
+    name=B-Spline-Kurve,
+    description={``B-Spline ist die Kurzform von Basis-Spline. Wie auch der Raum der Polynome ist der Raum der stückweisen Polynome ein Vektorraum und hat eine Basis. Im Kontext numerischer Verfahren, wo Splines häufig eingesetzt werden, ist die Wahl der Basis entscheidend für eventuelle Rundungsfehler und damit für die praktische Einsetzbarkeit. Eine bestimmte Basis hat sich hier als am besten geeignet herausgestellt: sie ist numerisch stabil und erlaubt die Berechnung von Werten der Spline-Funktion mittels einer Drei-Term-Rekursion. Diese so genannten B-Spline-Basisfunktionen haben einen kompakten Träger, sie sind nur auf einem kleinen Intervall von Null verschieden. Änderungen der Koeffizienten wirken sich also nur lokal aus. Splines, die in dieser Basis dargestellt werden, nennt man B-Splines.''~\cite{wiki:bspline}}
+}
+
+\newglossaryentry{Kontinuität}
+{
+    name=Stetigkeit (Kontinuität),
+    description={``Die Stetigkeit ist ein Konzept der Mathematik, das vor allem in den Teilgebieten der Analysis und der Topologie von zentraler Bedeutung ist. Eine Funktion heißt stetig, wenn hinreichend kleine Änderungen des Argumentes (der Argumente) zu beliebig kleinen Änderungen des Funktionswertes führen. Das heißt insbesondere, dass in den Funktionswerten keine Sprünge auftreten. Treten Sprünge nur in einer Richtung auf, spricht man von Halbstetigkeit.''~\cite{wiki:kontinuitaet}}
 }
