--- a/doc/lead/title_image.tex
+++ b/doc/lead/title_image.tex
@@ -29,7 +29,7 @@
 \vspace*{120mm}
 
 \fontsize{26pt}{28pt}\selectfont
-Erkennung von aktiven Konturen mittels Matlab
+Erkennung von aktiven Konturen mittels MATLAB
 \vspace{3mm}
 
 \fontsize{20pt}{22pt}\selectfont
@@ -46,7 +46,7 @@ Projektarbeit
 xxxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
 Autor:        \> Sven Osterwalder\\
 Datum:        \> \versiondate\\
-Betreuer:     \> Marx Stampfli\\
+Betreuer:     \> Prof.\ Marx Stampfli\\
 \end{tabbing}
 
 \end{textblock}
