--- a/doc/lead/versions.tex
+++ b/doc/lead/versions.tex
@@ -11,10 +11,13 @@ Versionen
 \fontsize{10pt}{18pt}\selectfont
 \begin{tabbing}
 xxxxxxxxxxx\=xxxxxxxxxxxxxxx\=xxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
-\textit{Version}	\> \textit{Kalenderwoche}	\> \textit{Status}		\> \textit{Bemerkungen}\\
-0.1	\> 9	\> Entwurf		\> Initiale Erstellung des Dokuments\\
-0.2	\> 10	\> Entwurf		\> Erstellung Konzept\\
-0.3	\> 11	\> Entwurf		\> Verfassen der Einleitung und Grundlagen\\
+\textit{Version}	\> \textit{Semsterwoche}	\> \textit{Status}		\> \textit{Bemerkungen}\\
+0.1	\> 9	\> Entwurf			\> Initiale Erstellung des Dokuments\\
+0.2	\> 10	\> Entwurf			\> Erstellung Konzept\\
+0.3	\> 11	\> Entwurf			\> Verfassen der Einleitung und Grundlagen\\
+0.4	\> 13	\> Entwurf			\> Verfassen der Kapitel Umsetzung und Benutzeroberfläche\\
+0.5	\> ---	\> Finale Version	\> Ergänzung bestehender Kapitel, Verfassen von Fazit und Ausblick,\\
+	\>		\>					\> Fertigstellung Dokumentation, Management Summary
 \end{tabbing}
 
 \end{textblock}
