Final corrections (yay!)

--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -25,15 +25,15 @@
 \usepackage[utf8]{inputenc}                                             % UTF-8 character encoding
 \usepackage[T1]{fontenc}                                                % hyphenation of words with ä,ö and ü
 \usepackage{textcomp}                                                   % additional symbols
-% \usepackage{ae}                                                         % better resolution of Type1-Fonts 
-% \usepackage{fancyhdr}                                                   % simple manipulation of header and footer 
+% \usepackage{ae}                                                       % better resolution of Type1-Fonts 
+% \usepackage{fancyhdr}                                                 % simple manipulation of header and footer 
 \usepackage{etoolbox}                                                   % color manipulation of header and footer
 \usepackage{graphicx}                                                   % integration of images
 \usepackage{float}                                                      % floating objects
-\usepackage{caption}                                                    % for captions of figures and tables
+\usepackage[font=footnotesize]{caption}                                 % for captions of figures and tables
 \usepackage{booktabs}                                                   % package for nicer tables
 \usepackage{tocvsec2}                                                   % provides means of controlling the sectional numbering
-\usepackage[square,sort,comma,authoryear]{natbib}                          % provides various citation styles
+\usepackage[square,sort,comma,authoryear]{natbib}                       % provides various citation styles
 \usepackage{wrapfig}                                                    % provides floating of text around images
 \usepackage{nameref}                                                    % provides printing names of references
 \usepackage{paralist}
@@ -281,9 +281,9 @@
 % Listings
 %---------------------------------------------------------------------------
 
-% \phantomsection{}
-% \addcontentsline{toc}{chapter}{Abbildungsverzeichnis}
-% \listoffigures
+\phantomsection{}
+\addcontentsline{toc}{chapter}{Abbildungsverzeichnis}
+\listoffigures
 
 %\phantomsection{}
 %\addcontentsline{toc}{chapter}{Tabellenverzeichnis}
