--- a/doc/lead/title_image.tex
+++ b/doc/lead/title_image.tex
@@ -44,13 +44,14 @@ Projektarbeit
 \fontsize{10pt}{17pt}\selectfont
 \begin{tabbing}
 xxxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
-Autor:        \> Sven Osterwalder\\
+Autor:        \> Sven Osterwalder\protect\footnotemark[2]\\
 Datum:        \> \versiondate\\
-Betreuer:     \> Prof.\ Marx Stampfli\\
+Betreuer:     \> Prof.\ Marx Stampfli\protect\footnotemark[3]\\
 \end{tabbing}
-
 \end{textblock}
 \end{flushleft}
+\footnotetext[2]{sven.osterwalder@students.bfh.ch}
+\footnotetext[3]{marx.stampfli@bfh.ch}
 
 \begin{textblock}{150} (28,280)
 \noindent 
