--- a/doc/lead/versions.tex
+++ b/doc/lead/versions.tex
@@ -10,14 +10,15 @@ Versionen
 
 \fontsize{10pt}{18pt}\selectfont
 \begin{tabbing}
-xxxxxxxxxxx\=xxxxxxxxxxxxxxx\=xxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
+xxxxxxxxxxx\=xxxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
 \textit{Version}	\> \textit{Semsterwoche}	\> \textit{Status}		\> \textit{Bemerkungen}\\
 0.1	\> 9	\> Entwurf			\> Initiale Erstellung des Dokuments\\
-0.2	\> 10	\> Entwurf			\> Erstellung Konzept\\
-0.3	\> 11	\> Entwurf			\> Verfassen der Einleitung und Grundlagen\\
-0.4	\> 13	\> Entwurf			\> Verfassen der Kapitel Umsetzung und Benutzeroberfläche\\
-0.5	\> ---	\> Finale Version	\> Ergänzung bestehender Kapitel, Verfassen von Fazit und Ausblick,\\
-	\>		\>					\> Fertigstellung Dokumentation, Management Summary
+0.2	\> 10	\> In Bearbeitung	\> Erstellung Konzept\\
+0.3	\> 11	\> In Bearbeitung	\> Verfassen der Einleitung und Grundlagen\\
+0.4	\> 13	\> In Bearbeitung	\> Verfassen der Kapitel Umsetzung und Benutzeroberfläche\\
+0.5	\> ---	\> In Bearbeitung	\> Ergänzung bestehender Kapitel, Verfassen von Fazit,\\
+	\>		\>					\> Fertigstellung Dokumentation, Management Summary\\
+1.0	\> 15	\> Vorgelegt		\> Korrekturen\\
 \end{tabbing}
 
 \end{textblock}
